2017-01-24  Edward Jones  <ed.jones@embecosm.com>

	* Driver.cpp: Convert input filenames to be absolute filenames for
	internal use.

2017-01-20  Edward Jones  <ed.jones@embecosm.com>

	* CMakeLists.txt: Add a symlink from mageec-gcc to
	mageec-fortran at install time.
	* Driver.cpp: Add the ability to specific a command to invoke
	gfortran from the GCC wrapper. When the driver is used, it will
	use the provided fortran compiler or c compiler depending on
	whether the driver is called through mageec-gcc or
	mageec-gfortran.
	(main): Refactor the argument handling to cope with fortran file,
	and input file provided mid-way through the command line string.

2017-01-20  Edward Jones  <ed.jones@embecosm.com>

	* Driver.cpp: Remove some unnecessary flags.
	* Parameters.h: Likewise.

2017-01-10  Edward Jones  <ed.jones@embecosm.com>

	* Driver.cpp: Compare feature file entries on the name of the
	program unit. Relax an overly aggressive warning to remove
	false positives.

2017-01-10  Edward Jones  <ed.jones@embecosm.com>

	* Driver.cpp: Use strings instead of UUIDs as identifiers.

2016-11-28  Edward Jones  <ed.jones@embecosm.com>

	* Driver.cpp: Comment out -fsection-anchors and
	-ftree-coalesce-inlined-vars flags.
	* Parameters.h: Likewise.

2016-10-25  Edward Jones  <ed.jones@embecosm.com>

	* Driver.cpp (loadFeatureIDs): Handle additional feature_class
	entry in csv file containing feature set identifiers.
	(main): When optimizing, only use the features which are classified
	as module features by the feature class.

2016-09-22  Edward Jones  <ed.jones@embecosm.com>

	* Driver.cpp: Use getFeatureGroupFeatures instead of getFeatures.

2016-09-21  Edward Jones  <ed.jones@embecosm.com>

	* Driver.cpp: Pass the command used to compile modules and
	functions to Database::newCompilation.

2016-09-21  Edward Jones  <ed.jones@embecosm.com>

	* Driver.cpp: Generate compilation ids for functions as well as
	modules.

2016-09-19  Edward Jones  <ed.jones@embecosm.com>
