@@ -1116,6 +1116,7 @@ static void printHelp() {
 "  -fmageec-framework-version  Print the version of the MAGEEC framework\n"
 "  -fmageec-debug              Enable debug output\n"
 "  -fmageec-gcc=<command>      Command to invoke gcc\n"
+"  -fmageec-g++=<command>      Command to invoke g++\n"
 "  -fmageec-gfortran=<command> Command to invoke gfortran\n"
 "  -fmageec-mode=<mode>        Mode of the driver, valid values are\n"
 "                              gather and optimize\n"
@@ -1132,6 +1133,8 @@ int main(int argc, const char *argv[]) {
 
   // The gcc command to use
   std::string gcc_command;
+  // The g++ command to use
+  std::string gxx_command;
   // The gfortran command to use
   std::string gfortran_command;
   // The database to gather into, or use when optimizing
@@ -1153,6 +1156,7 @@ int main(int argc, const char *argv[]) {
   bool with_framework_version = false;
   bool with_debug             = false;
   bool with_gcc_command       = false;
+  bool with_gxx_command       = false;
   bool with_gfortran_command  = false;
   bool with_db                = false;
   bool with_features          = false;
@@ -1196,6 +1200,13 @@ int main(int argc, const char *argv[]) {
         return -1;
       }
       with_gcc_command = true;
+    } else if (arg.compare(0, strlen("g++=") == 0) {
+      gxx_command = std::string(arg.begin() + strlen("g++="), arg.end());
+      if (gcc_command == "") {
+        MAGEEC_ERR("No gcc command provided");
+        return -1;
+      }
+      with_gxx_command = true;
     } else if (arg.compare(0, strlen("gfortran="), "gfortran=") == 0) {
       gfortran_command =
           std::string(arg.begin() + strlen("gfortran="), arg.end());
@@ -1392,14 +1403,20 @@ int main(int argc, const char *argv[]) {
   // Replace the command word depending on the underlying wrapper being used.
   //
   // For the 'mageec-gcc' wrapper, use the argument from '-fmageec-gcc', and
-  // for the 'mageec-gfortran' wrapper, use the '-fmageec-gfortran' argument
+  // for 'mageec-gfortran' and 'mageec-g++', use the '-fmageec-gfortran' and
+  // '-fmageec-g++' arguments respectively.
   if (cmd_args[0] == "mageec-gcc") {
     if (with_gcc_command)
       cmd_args[0] = gcc_command;
     else
       cmd_args[0] = "gcc";
-  }
-  if (cmd_args[0] == "mageec-gfortran") {
+  } else if (cmd_args[0] == "mageec-g++") {
+    if (with_gxx_command)
+      cmd_args[0] = gxx_command;
+    else
+      cmd_args[0] = "g++";
+  } else {
+    assert(cmd_args[0] == "mageec-gfortran");
     if (with_gfortran_command)
       cmd_args[0] = gfortran_command;
     else
